# my-coffee-analytics

./: .gitignore  README.md  coffee.py  main.py  pyproject.toml
.github/workflows/: pylint.yml  pytestcov.yml
coffee/config/: settings.toml
coffeeanalytics/: main.py
coffeeanalytics/config/: settings.toml
tests/: custom_fixtures.py  test_config.py  test_database.py  test_model.py  test_operations.py
