[tool.poetry]
name = "coffeeanalytics"
version = "0.1.0"
description = ""
authors = ["Denys Gonzaga <denysng@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.3"
black = "^24.10.0"
dynaconf = "^3.2.6"
tabulate = "^0.9.0"
python-dateutil = "^2.9.0.post0"
pytest-cov = "^6.0.0"
pytest = "^8.3.3"
mock = "^5.1.0"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
